@startuml

title __GUI's Class Diagram__\n

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.KsGui {
        {static} - formatStartOfLine : boolean
        {static} - lineNr : int
        {static} + ou()
        {static} + ou()
        {static} + oun()
        {static} + oun()
        {static} + ounArgs()
        {static} + ounerr()
        {static} + ounerr()
        {static} + ounerr()
        {static} + setFormatStartOfLine()
        {static} - getStartOfLine()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.MainWindow {
        {static} - INSETS : Insets
        {static} - INSETS_SMALLER : Insets
        {static} - MESSAGES : ResourceBundle
        {static} - SPACING : double
        {static} - SPACING_SMALLER : double
        {static} - TF_WIDTH : int
        {static} - TF_WIDTH_SMALLER : int
        - cmbCollisionTypes : ComboBox
        - cmbHashFunctions : ComboBox
        - colWidth : int
        - initialCapacity : int
        - loadFactor : float
        - map : ParsableMap<String, Car>
        - paneParam12Events : GridPane
        - paneRight : GridPane
        - sizeOfGenSet : int
        - sizeOfInitialSubSet : int
        - stage : Stage
        - taEvents : TextArea
        - taInput : TextArea
        - table : MapTable<String[], String>
        + MainWindow()
        {static} + createAndShowGui()
        + handle()
        - appearance()
        - createMap()
        - fileChooseMenu()
        - handleButtons()
        - initComponents()
        - loadFactorVerifier()
        - mapEfficiency()
        - mapGeneration()
        - mapPut()
        - notNegativeNumberVerifier()
        - readMapParameters()
        - updateHashtableParameters()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    abstract class edu.ktu.ds.lab3.gui.MainWindowMenu {
        {static} - MESSAGES : ResourceBundle
        + MainWindowMenu()
        {abstract} + handle()
        - initComponents()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    abstract class edu.ktu.ds.lab3.gui.MapTable {
        + MapTable()
        + formTable()
        {abstract} + returnValue()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.Panels {
        {static} + BTN_STYLE : String
        {static} + STYLE_COMMON : String
        {static} + STYLE_ERROR : String
        {static} + STYLE_PINK : String
        {static} + TABLE_CELL_STYLE_EMPTY : String
        {static} + TABLE_CELL_STYLE_FILLED : String
        {static} - SPACING : int
        - btns : List<Button>
        - tfs : List<TextField>
        + Panels()
        + Panels()
        + getButtons()
        + getParametersOfTable()
        + getTfOfTable()
        - initGridOfButtons()
        - initTableOfParameters()
        - paneLayout()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.ValidationException {
        - value : String
        + ValidationException()
        + ValidationException()
        + getValue()
    }
  }
  

  edu.ktu.ds.lab3.gui.MainWindow .up.|> javafx.event.EventHandler
  edu.ktu.ds.lab3.gui.MainWindow -up-|> javafx.scene.layout.BorderPane
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.demo.CarsGenerator : carsGenerator
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.utils.HashType : ht
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.MainWindowMenu : mainWindowMenu
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Panels : paneButtons
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Panels : paneParam1
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Panels : paneParam2
  edu.ktu.ds.lab3.gui.MainWindowMenu .up.|> javafx.event.EventHandler
  edu.ktu.ds.lab3.gui.MainWindowMenu -up-|> javafx.scene.control.MenuBar
  edu.ktu.ds.lab3.gui.MapTable -up-|> javafx.scene.control.TableView
  edu.ktu.ds.lab3.gui.Panels -up-|> javafx.scene.layout.GridPane


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
